--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -95,7 +95,6 @@
   gap: 0.5rem;
   color: var(--neutral-dark);
 }
-
 .contact__icon {
   font-size: 3rem;
   color: var(--primary);
@@ -109,8 +108,13 @@
   text-decoration: none;
   font-size: 1.5rem;
   transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 
 .contact__info a:hover {
-  color: var(--primary);
+  color: var(--primary-light);
+}
+.contact__icon:hover {
+  color: var(--primary-light);
 }
